--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ main {
 
 .column .overlay p {
 	font-size: clamp(5.5rem, 5vw, 9rem);
-	color: blue;
+	color: white;
 }
 
 @media screen and (min-width: 1025px) {
