--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ header.site-header {
 	left: 0;
 	width: 100%;
 	z-index: 9;
-	background-color: white;
+	background-color: #3C3E44;
 	height: 12vh;
 	min-height: 85px;
 }
@@ -156,7 +156,7 @@ header.site-header {
 .main-navigation a {
 	display: block;
 	text-decoration: none;
-	color: #58595B;
+	color: white;
 }
 
 .main-navigation a:hover {
@@ -202,11 +202,11 @@ main {
 }
 
 .column.game, .game.inner.column {
-	background-color: #F7941D;
+	background-color: #B9B644;
 }
 
 .column.team, .team.inner.column {
-	background-color: #C8DA2B;
+	background-color: #A03D18;
 }
 
 .column.press, .press.inner.column {
@@ -214,11 +214,11 @@ main {
 }
 
 .column.events, .events.inner.column {
-	background-color: #90D2C3;
+	background-color: #324754;
 }
 
 .column.contact-us, .contact.us.inner.column {
-	background-color: #F05885;
+	background-color: #545456;
 }
 
 .column img {
