--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@ main {
 .column a {
 	text-decoration: none;
 	color: inherit;
+	font-family: 'Futura Condensed ExtraBold';
 }
 
 .column .overlay {
@@ -251,7 +252,7 @@ main {
 }
 
 .column .overlay p {
-	font-size: clamp(5.5rem, 5vw, 9rem);
+	font-size: clamp(5.5rem, 3vw, 9rem);
 	color: white;
 }
 
