--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ main {
 	background-color: #B9B644;
 }
 
-.column.team, .team.inner.column {
+.column.journey, .journey.inner.column {
 	background-color: #A03D18;
 }
 
@@ -252,7 +252,7 @@ main {
 }
 
 .column .overlay p {
-	font-size: clamp(5.5rem, 3vw, 9rem);
+	font-size: clamp(3rem, 2vw, 9rem);
 	color: white;
 }
 
