--- a/sass/main.scss
+++ b/sass/main.scss
@@ -219,58 +219,77 @@ main {
 }
 .column {
 
-    width: 20%;
-    position: relative;
-    overflow: hidden;
-    transition: 0.5s ease; 
+        width: 20%;
+        position: relative;
+        overflow: hidden;
+        transition: 0.5s ease; 
 
-    a {
+        a {
         text-decoration: none;
         color: inherit;
         font-family: 'Futura Condensed ExtraBold';
-    }
+        }
 
-    .overlay {
-    width: 100%;
-    height: 88vh;
-    position: relative;
-    padding-top: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    transition: all .5s ease-in-out;
-    z-index: 3;
+        .overlay {
+        width: 100%;
+        height: 88vh;
+        position: relative;
+        padding-top: 5rem;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        transition: all .5s ease-in-out;
+        z-index: 3;
 
-    p {
-        font-size: clamp(3rem, 2vw, 9rem);
-        color: white;
-        transition: .3s ease-in-out;
-    }
-}
-.gradient {
-    width: 100%;
-    height: 88vh;
-    position: absolute;
-    z-index: 3;
-    transition: all .5s ease-in-out;
-    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.25) 25%, rgba(0,0,0,0.50) 50%, rgba(0,0,0,0.75) 75%, rgba(0,0,0,1) 100%);
-    
-}
+            p {
+            font-size: clamp(3rem, 2vw, 9rem);
+            color: white;
+            transition: .3s ease-in-out;
+            }
+        }
+        .gradient {
+        width: 100%;
+        height: 88vh;
+        position: absolute;
+        z-index: 3;
+        transition: all .5s ease-in-out;
+        background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.25) 25%, rgba(0,0,0,0.50) 50%, rgba(0,0,0,0.75) 75%, rgba(0,0,0,1) 100%);
 
-&:hover {
+        }
 
-.gradient {
-    opacity: .7;
-}
-.overlay {
+        &:hover {
 
-    p {
-        transform: scale(1.1);
-    }
-}
-}
-}
+            .gradient {
+            opacity: .7;
+            }
+            .overlay {
 
+                p {
+                transform: scale(1.1);
+                }
+            }
+        }
+}
+.column.game .gradient {
+    background: linear-gradient(180deg, rgba(48, 52, 0, 0.85) 25%, transparent 65.8%);
+
+}
+.column.journey .gradient {
+    background: linear-gradient(180deg, rgba(27, 0, 0, 0.85) 25%, transparent 81%);
+
+}
+.column.press .gradient {
+    background: linear-gradient(180deg, rgba(21, 0, 45, 0.60) 25%, transparent 81%);
+
+}
+.column.events .gradient {
+    background: linear-gradient(180deg, rgba(0, 3, 17, 0.60) 42.86%, transparent 81%);
+
+}
+.column.contact-us .gradient {
+    background: linear-gradient(180deg, rgba(35, 31, 32, 0.60) 25%, transparent 81%);
+
+}
 
 @media screen and (min-width: 1025px) {
     .page-template-inner .column {
