--- a/sass/main.scss
+++ b/sass/main.scss
@@ -86,6 +86,7 @@ body {
     font-family: 'Futura Condensed Medium', sans-serif;
     font-size: var(--font-size-default);
     color: #58595B;
+    position: relative;
 }
 
 .hide {
@@ -190,6 +191,10 @@ main {
     height: 88vh;
     display: flex;
 	margin-top: 12vh;
+    position: relative;
+}
+.column {
+    position: relative;
 }
 
 .column.game, .game.inner.column {
@@ -293,11 +298,9 @@ main {
     }
     
 }
-
-
-.column {
-
-    
+.column-move-left {
+    left: 0 !important; /* Ensure this overrides any other left property */
+    transition: left 1s ease; /* 1s duration for the animation */
 }
 
 
@@ -320,6 +323,7 @@ main {
         text-align: center;
     }
 }
+
 
 @media screen and (max-width: 1024px) {
     main {
