fix inner gradients and images

--- a/style.css
+++ b/style.css
@@ -221,13 +221,9 @@ main {
 .column img {
 	object-fit: cover;
 	width: 100%;
-	height: 88vh;
+	height: 100%;
 	z-index: 2;
 	position: absolute;
-}
-
-.column img:nth-of-type(2) {
-	display: none;
 }
 
 .column {
@@ -302,6 +298,9 @@ main {
 	main {
 		display: flex;
 	}
+	.column img.mobile-column-image {
+		display: none;
+	}
 	.page-template-inner .column {
 		width: 20%;
 		max-width: 655px;
@@ -313,6 +312,12 @@ main {
 	/* Ensure this overrides any other left property */
 	transition: left 1s ease;
 	/* 1s duration for the animation */
+}
+
+.page-template-inner .column {
+	position: fixed;
+	left: 0;
+	height: 100%;
 }
 
 .inner-content {
@@ -329,14 +334,18 @@ main {
 		width: 100%;
 		height: calc(88vh / 5);
 	}
-	.column img:nth-of-type(1) {
+	.column img.mobile-column-image {
+		display: block;
+	}
+	.column img.desktop-column-image {
 		display: none;
 	}
-	.column img:nth-of-type(2) {
-		display: block;
-		object-fit: cover;
+	.page-template-inner .column {
 		width: 100%;
-		height: 100%;
+		height: calc(88vh / 5);
+	}
+	.page-template-inner .column img {
+		display: none;
 	}
 }
 
