--- a/sass/main.scss
+++ b/sass/main.scss
@@ -214,13 +214,11 @@ main {
 .column img {
     object-fit: cover;
     width: 100%;
-    height: 88vh;
+    height: 100%;
     z-index: 2;
     position: absolute;
 }
-.column img:nth-of-type(2) {
-    display: none;
-}
+
 .column {
 
         width: 20%;
@@ -294,6 +292,9 @@ main {
     main {
         display: flex;
     }
+    .column img.mobile-column-image {
+        display: none;
+    }
     .page-template-inner .column {
         width: 20%;
         max-width: 655px;
@@ -310,7 +311,9 @@ main {
 .page-template-inner {
 
     .column {
-      
+      position: fixed;
+      left: 0;
+      height: 100%;
     }
 }
 .inner-content {
@@ -328,15 +331,18 @@ main {
         width: 100%;
 		height: calc(88vh / 5);
     }
-    .column img:nth-of-type(1) {
+    .column img.mobile-column-image {
+        display: block;
+    }
+    .column img.desktop-column-image {
         display: none;
     }
-    .column img:nth-of-type(2) {
-        display: block;
-        object-fit: cover;
+    .page-template-inner .column {
         width: 100%;
-        height: 100%;
-    }
-    
-    
+		height: calc(88vh / 5);
+
+        img {
+            display: none;
+        }
+    }   
 }
