fix column image size

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -221,7 +221,7 @@ main {
 
 .column {
 
-        width: 20%;
+        width: 20vw;
         position: relative;
         overflow: hidden;
         transition: 0.5s ease; 
@@ -313,12 +313,13 @@ main {
     .column {
       position: fixed;
       left: 0;
-      height: 100%;
+    //   height: 100%;
     }
 }
 .inner-content {
-    width: 80%;
+    width: 80vw;
     padding: 5rem;
+    margin-left: 20vw;
 
     h1 {
         text-align: center;
