--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ header.site-header {
 	top: 0;
 	left: 0;
 	width: 100%;
-	z-index: 9;
+	z-index: 999;
 	background-color: #3C3E44;
 	height: 12vh;
 	min-height: 85px;
@@ -196,6 +196,7 @@ main {
 
 .column {
 	position: relative;
+	z-index: 99;
 }
 
 .column.game, .game.inner.column {
@@ -214,7 +215,7 @@ main {
 	background-color: #324754;
 }
 
-.column.contact-us, .contact.us.inner.column {
+.column.contact, .contact.inner.column {
 	background-color: #545456;
 }
 
@@ -290,7 +291,7 @@ main {
 	background: linear-gradient(180deg, rgba(0, 3, 17, 0.6) 42.86%, transparent 81%);
 }
 
-.column.contact-us .gradient {
+.column.contact .gradient {
 	background: linear-gradient(180deg, rgba(35, 31, 32, 0.9) 25%, transparent 81%);
 }
 
@@ -330,6 +331,10 @@ main {
 }
 
 @media screen and (max-width: 1024px) {
+	.inner-content {
+		margin-left: 0;
+		margin-top: calc((88vh / 5) + 12vh);
+	}
 	.column {
 		width: 100%;
 		height: calc(88vh / 5);
@@ -343,6 +348,7 @@ main {
 	.page-template-inner .column {
 		width: 100%;
 		height: calc(88vh / 5);
+		top: 12vh;
 	}
 	.page-template-inner .column img {
 		display: none;
