--- a/sass/main.scss
+++ b/sass/main.scss
@@ -330,7 +330,7 @@ main {
 
 @media screen and (max-width: 1024px) {
     header.site-header {
-        padding: 0;
+        padding: 0!important;
     }
     .inner-content {
         margin-left: 0;
